fix list elements incorrectly wrapped in div not ul
fix duplicate page titles on edit job details/location pages

fix duplicate html ids

input for location autocomplete has incorrect owned_by value

fix incorrect use of aria-labels

change divs styled as headings to heading tags

move view application form to recommended accessible place

make card actions more descriptive with hidden text

add more descriptive gaps in employment label

add description hidden text to supporting docs remove action link

correct heading structure on filters component

correct heading structure on review  component

correct heading structure across jobseeker application journeys

add hidden descriptive text for share url button

add missing grey back ground for right column cta containers

--- a/app/frontend/src/styles/application/publishers/publisher.scss
+++ b/app/frontend/src/styles/application/publishers/publisher.scss
@@ -26,11 +26,6 @@ $desktop-container-width: 1200px;
     }
   }
 
-  .view-live-vacancy {
-    background-color: govuk-colour('light-grey');
-    padding-bottom: govuk-spacing(4);
-  }
-
   .application-count {
     display: block;
     margin: govuk-spacing(3);
